# mcomp-lang

./: .gitignore  README.md
mcomp-codegen/: README.md  TODO.md  definitions.sty  dune-project  grammar.tex  mcomp-lang.opam
mcomp-codegen/lib/: ast.ml  codegen.ml  codegen.mli  dune  linker.ml  linker.mli  location.ml  mcomp_stdlib.ml  optimizer.ml  parser.messages  parser.mly  parsing.ml  parsing.mli  scanner.mll  semantic_analysis.ml  semantic_analysis.mli  symbol_table.ml  symbol_table.mli
mcomp-codegen/test/: codegen_test.ml  dune  linker_test.ml  parser_test.ml  semant_test.ml  testall.sh
mcomp-codegen/test/samples/: fail-link1.mc  fail-link2.mc  fail-link3.mc  fail-link4.mc  fail-link5.mc  test-add1.mc  test-addf1.mc  test-addf1.out  test-arith3.mc  test-array2.mc  test-array6.mc  test-array7.mc  test-ex22.mc  test-ex4.mc  test-func1.mc  test-func10.mc  test-func4.mc  test-func9.mc  test-sort3.mc
mcomp-parsing/: TODO.md  mcomp-lang.opam
mcomp-parsing/lib/: ast.ml  dune  parser.mly  parsing.ml  scanner.mll
mcomp-parsing/test/samples/: fail-link6.mc  fail-link7.mc
mcomp-semantic-analysis/: TODO.md  dune-project
mcomp-semantic-analysis/lib/: ast.ml  dune  location.ml  parser.mly  scanner.mll  semantic_analysis.ml  symbol_table.ml  symbol_table.mli
