(library
 (name mcomp_lang)
 (public_name mcomp-lang)
 (libraries menhirLib llvm llvm.analysis llvm.scalar_opts easy_logging)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq)))

(ocamllex
 (modules scanner))

(menhir
 (modules parser)
 (flags --explain --dump --strict --table))

(rule 
 (targets parser_messages.ml)
 (deps parser.messages parser.mly)
 (action (with-stdout-to %{targets} (run menhir --compile-errors %{deps}))))
